sources installation guide

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -758,9 +758,9 @@ representation.
 
 \subsection{Comments}
 MicroML also features a small embedded language (a variant on \textbf{markdown}) for commenting
-files. See~\ref{appendix:md} for the syntax. A separate parser was written 
+files. See Appendix~\ref{appendix:md} for the syntax. A separate parser was written 
 for a small subset of markdown and pretty printing facilities
-for the terminal. It is assumed that the terminal is capable of rendering standard \textbf{ascii}
+for the terminal. It is assumed that the terminal is capable of rendering standard ascii
 escape sequences. Figure~\ref{fig:comments} illustrates a typical encounter with the comment system.
 
 \begin{figure}
@@ -1055,6 +1055,8 @@ result in a number of possible compiler optimisations and greater runtime safety
 
 %% appendices
 \begin{appendices}
+    \chapter{User Guide}
+    \input{user}
     \chapter{System F}
     \label{appendix:sysf}
     \input{sysf}
