--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -189,3 +189,14 @@ isbn = {9780511608865},
 note = {Cambridge Books Online}, 
 url = {http://dx.doi.org/10.1017/CBO9780511608865}
 }
+
+@book{opac-b1078351,
+   title = "Categories for the working mathematician",
+   author = "Mac Lane, Saunders",
+   series = "Graduate texts in mathematics",
+   publisher = "Springer-Verlag",
+   address = "New York",
+   url = "http://opac.inria.fr/record=b1078351",
+   isbn = "0-387-90036-5",
+   year = 1971
+}
