added stack reference

--- a/docs/user.tex
+++ b/docs/user.tex
@@ -1,4 +1,5 @@
-To build and install microML ensure that \textbf{stack} is available on your system. 
+To build and install microML ensure that
+\textbf{stack}\footnote{\url{https://docs.haskellstack.org/en/stable/README/}} is available on your system. 
 
 \begin{figure}
     \label{fig:help}
