--- a/docs/report.tex
+++ b/docs/report.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{minted}
 \usepackage{dirtree}
 \usepackage{palatino}
@@ -23,6 +24,7 @@
 \linespread{1.3}
 \usepackage{verbatimbox}
 \usepackage[toc,page]{appendix}
+\usepackage{tabu}
 
 %% draw nice frame around code fragments
 %% \newminted{haskell}{frame=lines,framerule=0.5pt}
@@ -113,8 +115,7 @@ environment conducive to learning, without being condescending or overly simplis
 the problem?'} \\ --- not Philip Wadler\footnote{The quote is actually from \textit{A
 Brief, Incomplete, and Mostly Wrong History of Programming Languages by James Iry
 \url{https://james-iry.blogspot.co.uk/2009/05/brief-incomplete-and-mostly-wrong.html}}, where it is
-deliberately falsely attributed, but it is itself a close paraphrase from \textit{Categories for the
-Working Mathematician}.} 
+deliberately falsely attributed, but it is itself a close paraphrase from~\cite{opac-b1078351} p.138.} 
 \end{flushright}
 
 \section{Motivation} 
