--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -200,3 +200,19 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
    isbn = "0-387-90036-5",
    year = 1971
 }
+
+@book{Abelson:1996:SIC:547755,
+ author = {Abelson, Harold and Sussman, Gerald J.},
+ title = {Structure and Interpretation of Computer Programs},
+ year = {1996},
+ isbn = {0262011530},
+ edition = {2nd},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
+
+@book{Friedman1900,
+    author = "Friedman and Felleisen",
+    title = "The little schemer",
+    keywords = "book.computers",
+}
